# gabriel-navarro-bio

./:  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
assets/blogs/: 0001-fastp.md  0002-fastqcrs.md  0003-fastqc.md  0004-dragmap.md  0005-nanoplot.md  0006-fastplong.md  0007-flye.md  0008-funnanotate.md  0009-boltz.md  0010-esm2.md  0011-rfdifussion.md  0012-flashattn.md  0013-mambassm.md  0014-fasthtml.md  0015-flashattn-docker.md  0016-flashattn-gcp.md  0016-vertex-ai-gcp.md  0017-batch-ml-size.md  0018-generative-lm.md  0019-engram-deepseek.md  0020-fm-purturb.md  0021-portello.md  0022-spike-sparse-sink-anatomy-massive.md
docs/superpowers/plans/: 2026-04-30-blog-html-pipeline.md
docs/superpowers/specs/: 2026-04-30-blog-html-pipeline-design.md
script/: submit_bigquery.py  update_bigquery.py
scripts/: __init__.py  backfill_blog_html.py
src/: config.py
src/cli/: __init__.py  __main__.py  blog.py
src/components/: __init__.py  code.py  layouts.py  navigation.py
src/components/backgrounds/: __init__.py  floating_balls.py  transition.py  vertical_lines.py
src/components/base/: __init__.py  buttons.py  card.py  chips.py  code.py  icons.py
src/components/buttons/: __init__.py  button.py
src/components/chips/: __init__.py  card_selection.py
src/components/decorative/: backgrounds.py  parallax.py
src/components/layout/: footer.py  navigation.py  page.py
src/components/modal/: __init__.py  contact_me.py  modal.py
src/components/modals/: contact.py
src/components/navigation/: simple_navigation.py
src/components/parallax/: __init__.py  dots.py  sunset.py
src/components/svg/: __init__.py  actions.py  social_media.py
src/config/: __init__.py  settings.py
src/core/: app_factory.py  routes.py
src/features/cv/: __init__.py  components.py  cv_page.py  diagrams.py
src/features/feed/: rss.py
src/lib/: bigquery.py  statics.py
src/lib/css/: __init__.py  (+3 more)
src/models/: __init__.py  project.py
src/pages/: __init__.py
src/services/: __init__.py  blog_frontmatter.py  blog_lint.py  blog_render.py  projects.py
src/styles/: __init__.py  _base.py  _components.py  _layout.py  _pages.py  base.py  custom_css.py  factory.py  projects.py  theme.py
tests/: conftest.py  test_accessibility.py  test_backfill_blog_html.py  test_blog_detail_view.py  test_blog_frontmatter.py  test_blog_lint.py  test_blog_pipeline_e2e.py  test_blog_render.py  test_buttons.py  test_card.py  test_cli_blog.py  test_cv_diagrams.py  test_feed.py  test_footer.py  test_horizontal_overflow_lock.py  test_masonry.py  test_meta_tags.py  test_navigation.py  test_project_model.py  test_project_service.py  test_settings.py
(+30 files in other folders)
